Small improvements to CompileBOM

--- a/eda/CompileBOM.ipynb
+++ b/eda/CompileBOM.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
    "source": [
     "partDict = {}  # {key: (total count, row)}\n",
     "for row in allRows2:\n",
-    "    key = row[-1]\n",
+    "    key = row[-1].upper()\n",
     "    if partDict.has_key(key):\n",
     "        partDict[key][0] += row[0]\n",
     "    else:\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -120,19 +120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "totalRows.sort(key=lambda row:''.join([i for i in row[orderKeyIndex] if not i.isdigit()])+\n",
-    "                              ' '+''.join(row[orderKey2Index].split()))"
+    "totalRows.sort(key=lambda row:(''.join([i for i in row[orderKeyIndex] if not i.isdigit()])+\n",
+    "                               ' '+''.join(row[orderKey2Index].split()))\n",
+    "                              .upper())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +178,7 @@
        "'JP'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,8 +205,44 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "smartsensorPowered.csv : COUT1,47uF,1206,Capacitor,TDK Corporation,C3216X5R1C476M160AB,DigiKey,445-6003-2-ND,at least 16V, prefer X5R/X7R (avoid Y5V)\n",
+      "smartsensorPowered.csv : CSS,.47uF,0603-CAP,Capacitor,Samsung Electro-Mechanics America, Inc,CL10B474KO8NNNC,DigiKey,1276-1062-2-ND,at least 16V, prefer X5R/X7R (avoid Y5V)\n"
+     ]
+    }
+   ],
    "source": [
-    "cmp('ab','b')"
+    "findStr = \"47uF\"\n",
+    "for boardInfo in inputs:\n",
+    "    fname = os.path.join(inputFilePrefix, boardInfo[0])\n",
+    "    boardMult = boardInfo[1]\n",
+    "    with open(fname, 'rb') as csvFile:\n",
+    "        csvReader = csv.reader(csvFile, delimiter=',')\n",
+    "        for row in csvReader:\n",
+    "            string = ','.join(row)\n",
+    "            if findStr in string:\n",
+    "                print boardInfo[0], ':', string"
    ]
   },
   {
