More small improvements to CompileBOM

--- a/eda/CompileBOM.ipynb
+++ b/eda/CompileBOM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -14,23 +14,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "370"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Select input files\n",
     "inputFilePrefix = 'BOM'\n",
     "inputs = [\n",
-    "    ['smartsensor.csv', 20],\n",
-    "    ['smartsensorPowered.csv', 4],\n",
-    "    ['battery_buzzer.csv', 6],\n",
-    "    ['metal_detector_circuit.csv', 4],\n",
-    "    ['team_flag.csv', 4],\n",
-    "    ['cape.csv', 4],\n",
-    "    ['arduino_smartsensor_shield.csv', 16],\n",
-    "    ['grizzly_bear.csv', 10],\n",
+    "    ['smartsensor.csv', 180+70+60+30+30],\n",
+    "    ['smartsensorPowered_servo.csv', 30],\n",
+    "    ['battery_buzzer.csv', 70],\n",
+    "    ['metal_detector_circuit.csv', 30],\n",
+    "    ['team_flag.csv', 60],\n",
+    "    ['cape.csv', 70],\n",
+    "    ['arduino_smartsensor_shield.csv', 0],\n",
+    "    ['grizzly_bear.csv', 285],\n",
     "]\n",
     "# Select output files\n",
     "outputCsv = 'totalBom.csv'\n",
@@ -40,12 +51,13 @@
     "sortKeys = ['Value','Package','Manufacturer Part Number',\n",
     "            'Distributor Part Number']\n",
     "orderKey = 'Reference Designator'  # Try to order the output in a nice way\n",
-    "orderKey2 = 'Value'"
+    "orderKey2 = 'Value'\n",
+    "180+70+60+30+30"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -120,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -145,12 +157,13 @@
     "    csvWriter = csv.writer(csvFile, delimiter=',')\n",
     "    csvWriter.writerow(tableHeader)\n",
     "    for row in totalRows:\n",
-    "        csvWriter.writerow(row)"
+    "        if row[0] != 0:\n",
+    "            csvWriter.writerow(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +200,7 @@
        "'JP'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,36 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -227,8 +220,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "smartsensorPowered.csv : COUT1,47uF,1206,Capacitor,TDK Corporation,C3216X5R1C476M160AB,DigiKey,445-6003-2-ND,at least 16V, prefer X5R/X7R (avoid Y5V)\n",
-      "smartsensorPowered.csv : CSS,.47uF,0603-CAP,Capacitor,Samsung Electro-Mechanics America, Inc,CL10B474KO8NNNC,DigiKey,1276-1062-2-ND,at least 16V, prefer X5R/X7R (avoid Y5V)\n"
+      "smartsensorPowered_servo.csv : COUT1,47uF,1206,Capacitor,TDK Corporation,C3216X5R1C476M160AB,DigiKey,445-6003-2-ND,at least 16V, prefer X5R/X7R (avoid Y5V)\n",
+      "smartsensorPowered_servo.csv : CSS,.47uF,0603-CAP,Capacitor,Samsung Electro-Mechanics America, Inc,CL10B474KO8NNNC,DigiKey,1276-1062-2-ND,at least 16V, prefer X5R/X7R (avoid Y5V)\n"
      ]
     }
    ],
